<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="channel_name">Udacity Channel</string>
    <string name="channel_description">Udacity Channel Description</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_first_item">Glide - Image Loading Library by BumpTech</string>
    <string name="download_second_item">LoadApp - Current repository by Udacity</string>
    <string name="download_third_item">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="toast_message">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">ok</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="check_the_status">Check the status</string>
</resources>
