<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <View
        android:id="@+id/view_download"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/view_download"
        app:layout_constraintEnd_toEndOf="@id/view_download"
        app:layout_constraintStart_toStartOf="@id/view_download"
        app:layout_constraintTop_toTopOf="@id/view_download"
        app:srcCompat="@drawable/download_cloud_solid" />

    <RadioGroup
        android:id="@+id/group_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_download">

        <RadioButton
            android:id="@+id/radio_glide"
            style="@style/TextRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_first_item" />

        <RadioButton
            android:id="@+id/radio_load_app"
            style="@style/TextRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/download_second_item" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            style="@style/TextRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/download_third_item" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60dp"
        android:layout_margin="@dimen/_20dp"
        app:backgroundColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>